--- a/caravan/style.css
+++ b/caravan/style.css
@@ -9,11 +9,27 @@ a {
   text-decoration: none;
 }
 
+header, nav, h2, .main-visual, footer {
+  font-family: Chalkduster, "Bradley Hand", Courier, "Segoe Print", sans-serif;
+}
+
 header {
   width: 90%;
   padding: 15px 0;
   margin:  0 auto;
   text-align: center;
+  position: relative;
+}
+
+.social i {
+  display: inline-block;
+  margin-left: 20px;
+}
+
+.social {
+position:absolute;
+  top:22px;
+  right: 22px;
 }
 
 header .heading {
@@ -209,4 +225,95 @@ footer {
 
 .footer-text {
   color: #fff;
+}
+
+@media screen and (max-width:425px) {
+  header {
+    width: 100%;
+  }
+
+  .nav-list {
+    width: 100%;
+  }
+  .nav-list-item {
+    width: 100%;
+    margin: 0 0 10px 0;
+  }
+
+  .social {
+    display: none;
+  }
+
+  .main-visual {
+    width: 100%;
+  }
+
+  .main-visual-content {
+    width: 100%;
+  }
+
+  .main-visual-text {
+    width: 100%;
+  }
+
+  .main-visual-name {
+    width: 100%;
+  }
+
+ main {
+   width: 100%;
+   display: block;
+ }
+
+ .blog {
+   width: 100%;
+   margin-right: 0;
+
+ }
+
+ .blog-box {
+   padding-left: 2px;
+   padding-right: 2px;
+ }
+ 
+ .blog-image {
+   width: 49%;
+
+ }
+
+ .blog-text {
+   width: 49%;
+   padding: 25px 0 0 15px;
+
+ }
+
+.pagination {
+  padding-top: 15px;
+  padding-bottom: 50px;
+}
+
+.sidebar {
+  width: 100%;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
+
+.instagram-box {
+  width: 48%;
+  padding-top: 48%;
+}
+
+.instagram-box:nth-child(odd) {
+  margin-right: 4%;
+}
+
+.pagination {
+  margin-bottom: 50px;
+}
+}
+
+
+
+
 }
