--- a/課題１/課題１.css
+++ b/課題１/課題１.css
@@ -36,7 +36,7 @@ main {
 
 .main-photo2 {
   height: 150px;
-  background-image: url(img/flow02.png);
+  background-image: url(https://github.com/yurimika/html.css/blob/main/%E8%AA%B2%E9%A1%8C%EF%BC%91/img/flow02.png?raw=true);
   background-position: bottom;
   background-size: cover;
 }
