--- a/課題１/課題１.css
+++ b/課題１/課題１.css
@@ -29,21 +29,21 @@ main {
 
 .main-photo1 {
   height: 150px;
-  background-image: url(https://github.com/yurimika/html.css/blob/main/%E8%AA%B2%E9%A1%8C%EF%BC%91/img/flow01.png?raw=true);
+  background-image: url(img/flow01.png);
   background-position: bottom;
   background-size: cover;
 }
 
 .main-photo2 {
   height: 150px;
-  background-image: url(https://github.com/yurimika/html.css/blob/main/%E8%AA%B2%E9%A1%8C%EF%BC%91/img/flow02.png?raw=true);
+  background-image: url(img/flow02.png);
   background-position: bottom;
   background-size: cover;
 }
 
 .main-photo3 {
   height: 150px;
-  background-image: url(https://github.com/yurimika/html.css/blob/main/%E8%AA%B2%E9%A1%8C%EF%BC%91/img/flow03.png?raw=true);
+  background-image: url(img/flow03.png);
   background-position: bottom;
   background-size: cover;
 }
